--- a/The Strange Case of Dr. Jekyll and Mr. Hyde.html
+++ b/The Strange Case of Dr. Jekyll and Mr. Hyde.html
@@ -1,1 +1,17 @@
-Alice's Adventures in Wonderland.html
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+	<head>
+		<title>
+			The Strange Case of Dr. Jekyll and Mr. Hyde by Robert Louis Stevenson
+		</title>
+		<link rel = "stylesheet" type="text/css" href ="gutenberg.css">
+	</head>
+
+	<body>
+
+
+
+
+	</body>
+</html>
