--- a/yufei_good.html
+++ b/yufei_good.html
@@ -44,8 +44,10 @@
 
     <div class="content">
         <h2>History</h2>
-        <p>I started my life at the Unviersity Of Alberta in 2012. At first, I want to be a engineering student, but then I feel it is too many competition. I took computer 174 in my first term, and that is my first course that got an B+. I turned into Computing Science Specialization at my second years.</p>
-        <p>Computer Science courses that I have taken or currently taking:</p>
+        <b><p>I started my life at the Unviersity Of Alberta in 2012. At first, I want to be a engineering student, but then I feel it is too many competition. </p>
+        <p>I took computer 174 in my first term, and that is my first course that got an B+. I turned into Computing Science Specialization at my second years.</p></b><br>
+
+        <b><p>Computer Science courses that I have taken or currently taking:</p></b>
         <p>CMPUT 174 Introduction to the Foundations of Computation I</p>
         <p>CMPUT 175 Introduction to the Foundations of Computation II</p>
         <p>CMPUT 201 Practical Programming Methodology</p>
@@ -68,15 +70,18 @@
 
     <h3>My Language Skills</h3>
 
-    <div id="piechart" style="width: 500px; height: 300px;padding-left: 35%;"></div>
+    <div id="piechart" style="width: 480px; height: 284px;padding-left: 42%;"></div>
 
-    <br>
+    
     <hr>
 
     <h4>Some Other Imformation about me</h4>
     <p>I love dogs soooo much!</p>
     <p>Sometims I feel that I am similar with dog.</p>
     <p>However, I only love those cute dogs!</p>
+
+
+    <hr>
      
     <div class="footer">
         <p>If you have any question, please contact me at yufei2@ualberta.ca</p>
