--- a/yufei_good.html
+++ b/yufei_good.html
@@ -48,10 +48,10 @@
             <tr>
             <th>About me</th>
             <td>
-            <li><a href="#.SI">Self Introduction</li>
-            <li><a href="#.EH">Education History</li>
-            <li><a href="#.LS">My Language Skills</li>
-            <li><a href="#.MI">More Imformation</li>
+            <li><a href="#.SI">Self Introduction</a></li>
+            <li><a href="#.EH">Education History</a></li>
+            <li><a href="#.LS">My Language Skills</a></li>
+            <li><a href="#.MI">More Imformation</a></li>
             </td>
             </tr>
         </table>
@@ -101,21 +101,38 @@
     <hr>
 
     <h4 id = ".MI">Some Other Imformation about me</h4>
+    <p><b>These are some of the group project I had contributed to:</b></p>
+    
+    <li>
+    <a class = "url http outside" href = "https://github.com/shawnwanderson/466T7Music">
+    CMPUT 466, Machine Learning
+    </a></li>
+    <br>
+    <li>
+    <a class = "url http outside" href = "https://github.com/CMPUT301W15T04/Team04Project-TravelExpenseTracker">
+    CMPUT 301, Travel Expense Tracker
+    </a></li>
+    <br>
+    <li>
+    <a class = "url http outside" href = "https://github.com/ProtossTBJY/ualbertabot">
+    CMPUT 350, ProtossTBJY based on ualbertabot
+    </a></li>
+    <br>
+    <li>
+    <a class = "url http outside" href = "https://github.com/391TeamW2015/proj1">
+    CMPUT 391, RIS
+    </a></li>
+    <br>
+    <li>
+    <a class = "url http outside" href = "https://github.com/kdhaywar/CMPUT404-project-socialdistribution">
+    CMPUT 404, Social Distribution
+    </a></li>
+
+    <br>
+    <p>By the way</p>
     <p>I love dogs soooo much!</p>
     <p>Sometims I feel that I am similar with dog.</p>
     <p>However, I only love those cute dogs!</p>
-
-        <p>I love dogs soooo much!</p>
-    <p>Sometims I feel that I am similar with dog.</p>
-    <p>However, I only love those cute dogs!</p>
-        <p>I love dogs soooo much!</p>
-    <p>Sometims I feel that I am similar with dog.</p>
-    <p>However, I only love those cute dogs!</p>
-        <p>I love dogs soooo much!</p>
-    <p>Sometims I feel that I am similar with dog.</p>
-    <p>However, I only love those cute dogs!</p>
-
-
     <hr>
      
     <div class="footer">
